--- a/src/styles/large.scss
+++ b/src/styles/large.scss
@@ -1,3 +1,10 @@
 @media only screen and (min-width: 1024px){
     .large-4 {width: calc(100%/3);}
+
+    .landing-tiles {
+        display: grid;
+        grid-template-columns: repeat(3, 1.2fr);
+        column-gap: 20px;
+        row-gap: 20px;
+    }
 } /* end of media query */
