--- a/src/styles/small.scss
+++ b/src/styles/small.scss
@@ -121,10 +121,14 @@ footer {
 
 .landing-tiles {
     display: grid;
+    grid-template-columns: repeat(1, 1.2fr);
+    column-gap: 20px;
+    row-gap: 20px;
 }
 
 .tile {
     padding: 2rem;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .tile > h2 {
