--- a/src/styles/color_palette.scss
+++ b/src/styles/color_palette.scss
@@ -2,7 +2,25 @@ $strict-colors: true;
 
 $colors: (
     red-0: #FCF5F5,
+    red-100: #FFE2E2,
+    red-200: #FFCFCD,
+    red-300: #FFBCB8,
+    red-400: #FFA9A3,
+    red-500: #FF958C,
+    red-600: #FF8175,
+    red-700: #FF6C5E,
+    red-800: #FF5545,
+    red-900: #FF3A2B,
     red-1000: #FC0A0A,
+    red-1100: #E60013,
+    red-1200: #D00017,
+    red-1300: #BA0019,
+    red-1400: #A4001A,
+    red-1500: #8F0019,
+    red-1600: #790118,
+    red-1700: #640316,
+    red-1800: #500512,
+    red-1900: #3C060C,
     red-2000: #2A0303
 );
 
