--- a/src/styles/medium.scss
+++ b/src/styles/medium.scss
@@ -14,4 +14,18 @@
         row-gap: 20px;
     }
 
+    /* Color Boxes */
+
+    .color-box {
+        padding: 4rem;
+        text-align: center;
+    }
+
+    .color-box-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1.2fr);
+        column-gap: 20px;
+        row-gap: 20px;
+    }
+
 } /* end of media query */
